--- a/order.yml
+++ b/order.yml
@@ -33,6 +33,11 @@ spring:
         remove-abandoned: true
         remove-abandoned-timeout-millis: 300
         log-abandoned: true
+  rabbitmq:
+      host: 192.168.1.189
+      port: 15672
+      username: admin
+      password: admin
 eureka:
   client:
     service-url:
