--- a/order.yml
+++ b/order.yml
@@ -33,6 +33,11 @@ spring:
         remove-abandoned: true
         remove-abandoned-timeout-millis: 300
         log-abandoned: true
+  rabbitmq:
+    host: 122.112.204.214
+    port: 5671
+    username: admin
+    password: admin
 eureka:
   client:
     service-url:
