modify rabbit MQ user and password

--- a/order.yml
+++ b/order.yml
@@ -35,9 +35,9 @@ spring:
         log-abandoned: true
   rabbitmq:
     host: 122.112.204.214
-    port: 5671
-    username: admin
-    password: admin
+    port: 5672
+    username: huanghuanghui
+    password: Huang123
 eureka:
   client:
     service-url:
