--- a/order.yml
+++ b/order.yml
@@ -36,6 +36,25 @@ spring:
     port: 5672
     username: huanghuanghui
     password: Huang123
+    #虚拟主机地址
+    virtual-host: /
+    #连接超时时间
+    connection-timeout: 15000
+    publisher-confirms: true
+    publisher-returns: true
+    template:
+      mandatory: true
+    #消费端配置
+    listener:
+      simple:
+        #消费端
+        concurrency: 5
+        #最大消费端数
+        max-concurrency: 10
+        #自动签收auto  手动 manual
+        acknowledge-mode: manual
+        #限流（海量数据，同时只能过来一条）
+        prefetch: 1
 eureka:
   client:
     service-url:
