--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -19,3 +19,10 @@ zuul:
   ignored-patterns:
     - /**/v1/send-amqp
     - /myProduct/v1/send-amqp
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka,http://127.0.0.1:8762/eureka
+#      eureka控制台status后自定义的网址地址，不配置将显示本机ip:client，这个配置的为自定义连接
+  instance:
+    hostname: 127.0.0.1
